Fix the overflow on message bubbles with long names/attachments

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -154,6 +154,7 @@
   padding-left: 12px;
   padding-top: 10px;
   padding-bottom: 10px;
+  min-width: 0px;
 }
 
 .module-message__container--incoming {
